--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,30 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Background colors -->
+    <color name="onboarding_background">#1a1a1a</color>
+
+    <!-- Text colors -->
+    <color name="text_primary_dark">#ffffff</color>
+    <color name="text_primary_light">#f2f2f3</color>
+    <color name="text_accent_cyan">#4dd9ff</color>
+    <color name="text_secondary">#cccccc</color>
+
+    <!-- Course button colors -->
+    <color name="course_button_background">#2a2a2a</color>
+    <color name="course_button_text">#cccccc</color>
+    <color name="course_button_border">#3a3a3a</color>
+
+    <!-- Badge button colors -->
+    <color name="badge_button_background">#12b956</color>
+    <color name="badge_button_text">#ffffff</color>
+
+    <!-- Continue button colors -->
+    <color name="button_continue_background">#12b956</color>
+    <color name="button_continue_text">#f2f2f3</color>
+
+    <!-- Button ripple -->
+    <color name="button_ripple_dark">#1e1e1e</color>
+    <color name="button_ripple_light">#33ffffff</color>
 </resources>
