--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,6 +9,23 @@
         android:id="@+id/onboardingFragment"
         android:name="ru.gusandr.shopcourse.presentation.screens.onboarding.OnboardingFragment"
         android:label="Онбординг"
-        tools:layout="@layout/fragment_onboarding" />
+        tools:layout="@layout/fragment_onboarding">
+
+        <action
+            android:id="@+id/action_onboarding_to_registration"
+            app:destination="@+id/registrationFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popUpTo="@id/onboardingFragment"
+            app:popUpToInclusive="true" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="ru.gusandr.shopcourse.presentation.screens.auth.registration.RegistrationFragment"
+        android:label="Регистрация"
+        tools:layout="@layout/fragment_registration">
+
+    </fragment>
 
 </navigation>
