--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,46 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Status bar -->
-    <dimen name="status_bar_height">28dp</dimen>
-    <dimen name="status_bar_padding_horizontal">16dp</dimen>
-    <dimen name="status_icon_size">16dp</dimen>
-    <dimen name="status_icons_spacing">6dp</dimen>
 
-    <!-- Font sizes -->
     <dimen name="font_size_status_bar">14sp</dimen>
-    <dimen name="font_size_title">24sp</dimen>
+    <dimen name="font_size_title">28sp</dimen>
     <dimen name="font_size_course_text">12sp</dimen>
+    <dimen name="font_size_course_button">14sp</dimen>
     <dimen name="font_size_badge_text">11sp</dimen>
-    <dimen name="font_size_button">16sp</dimen>
+    <dimen name="font_size_button">14sp</dimen>
 
-    <!-- Title section -->
-    <dimen name="title_margin_top">40dp</dimen>
-    <dimen name="title_line_spacing">4dp</dimen>
-    <dimen name="title_line_height">28dp</dimen>
+    <dimen name="button_continue_corner_radius">100dp</dimen>
+    <dimen name="button_default_corner_radius">30dp</dimen>
 
-    <!-- Green divider lines -->
-    <dimen name="divider_height">1dp</dimen>
-    <dimen name="divider_margin_top">12dp</dimen>
-    <dimen name="divider_margin_bottom">16dp</dimen>
-
-    <!-- Courses grid -->
-    <dimen name="courses_margin_top">12dp</dimen>
-    <dimen name="row_height">24dp</dimen>
-    <dimen name="grid_row_spacing">10dp</dimen>
-    <dimen name="badge_margin">4dp</dimen>
-    <dimen name="badge_padding_horizontal">12dp</dimen>
-
-    <!-- Continue button -->
-    <dimen name="button_height">48dp</dimen>
-    <dimen name="button_margin_horizontal">32dp</dimen>
-    <dimen name="button_corner_radius">24dp</dimen>
-
-    <!-- Bottom indicator -->
-    <dimen name="bottom_indicator_width">120dp</dimen>
-    <dimen name="bottom_indicator_height">4dp</dimen>
-    <dimen name="bottom_indicator_margin_top">40dp</dimen>
-    <dimen name="bottom_indicator_margin_bottom">24dp</dimen>
-
-    <!-- Content padding -->
-    <dimen name="content_padding_horizontal">16dp</dimen>
 </resources>
