--- a/app/src/main/res/drawable/bg_input_field.xml
+++ b/app/src/main/res/drawable/bg_input_field.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#32333A" />
-    <corners android:radius="@dimen/button_default_corner_radius" />
+    <solid android:color="#24252A" />
+    <corners android:radius="28dp" />
 </shape>
