--- a/app/src/main/res/drawable/shape_rounded_button_default.xml
+++ b/app/src/main/res/drawable/shape_rounded_button_default.xml
@@ -1,4 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/course_badge_background"/>
+    <solid android:color="@color/green"/>
     <corners android:radius="@dimen/button_default_corner_radius"/>
 </shape>
