--- a/app/src/main/res/layout/fragment_list_courses.xml
+++ b/app/src/main/res/layout/fragment_list_courses.xml
@@ -34,13 +34,15 @@
             android:letterSpacing="0.018"
             android:lineHeight="18dp"
             android:minWidth="264dp"
-            android:paddingHorizontal="4dp"
-            android:textColor="#f2f2f3"
+            android:paddingHorizontal="16dp"
+            android:textColor="@color/primary_light"
             android:textColorHint="#32f2f2f3"
+            android:enabled="false"
             android:textSize="14sp" />
 
         <ImageButton
             android:id="@+id/btn_filter"
+            android:enabled="false"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_marginStart="8dp"
@@ -53,8 +55,11 @@
         android:id="@+id/sort_section"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:orientation="horizontal"
+        android:paddingVertical="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_container">
 
@@ -79,18 +84,6 @@
 
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_courses"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:clipToPadding="false"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sort_section"
-        tools:listitem="@layout/item_course_card" />
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav"
         android:layout_width="0dp"
@@ -107,5 +100,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu_bottom_nav" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_courses"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        android:paddingBottom="16dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/sort_section"
+        tools:listitem="@layout/item_course_card" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
