--- a/app/src/main/res/layout/item_course_card.xml
+++ b/app/src/main/res/layout/item_course_card.xml
@@ -88,8 +88,7 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_bookmark"
-                app:tint="@color/primary_light" />
+                android:src="@drawable/ic_bookmark"/>
 
         </FrameLayout>
 
