--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,9 +19,36 @@
             app:popUpToInclusive="true" />
 
         <action
+            android:id="@+id/action_onboarding_to_login"
+            app:destination="@+id/loginFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popUpTo="@id/onboardingFragment"
+            app:popUpToInclusive="true" />
+
+        <action
             android:id="@+id/action_onboarding_to_list_courses"
             app:destination="@+id/listCoursesFragment"
             app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="ru.gusandr.shopcourse.presentation.screens.auth.login.LoginFragment"
+        android:label="Вход"
+        tools:layout="@layout/fragment_login">
+
+        <action
+            android:id="@+id/action_login_to_registration"
+            app:destination="@+id/registrationFragment"
+            app:enterAnim="@anim/slide_in_right" />
+
+        <action
+            android:id="@+id/action_login_to_list_courses"
+            app:destination="@+id/listCoursesFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
 
     </fragment>
@@ -31,6 +58,11 @@
         android:name="ru.gusandr.shopcourse.presentation.screens.auth.registration.RegistrationFragment"
         android:label="Регистрация"
         tools:layout="@layout/fragment_registration">
+
+        <action
+            android:id="@+id/action_registration_to_login"
+            app:destination="@+id/loginFragment"
+            app:enterAnim="@anim/slide_in_right" />
 
         <action
             android:id="@+id/action_registration_to_list_courses"
